@@ -1,5 +1,0 @@
-This is a swipe navigation test.
-
-PASS: mouseWheel caused navigation
-PASS: navigated back to page1
-
