@@ -1,3 +1,15 @@
+2018-05-15  Ryan Haddad  <ryanhaddad@apple.com>
+
+        Unreviewed, rolling out r231763.
+
+        The test added with this change is failing an assertion.
+
+        Reverted changeset:
+
+        "NSEvent event trackers don't work from WebKitTestRunner"
+        https://bugs.webkit.org/show_bug.cgi?id=185383
+        https://trac.webkit.org/changeset/231763
+
 2018-05-15  David Kilzer  <ddkilzer@apple.com>
 
         TestWebKitAPI: Fix warnings found by new clang compiler
